syntax = "proto3";
import "PersistService.proto";
option java_multiple_files = true;
package com.beyt.anouncy.common.persist;

service RegionService {
  rpc findAllByParentRegionIdIsIn(IdStrList) returns (RegionListPTO);
  rpc findAllByLocationIdIsIn(IdStrList) returns (RegionListPTO);
  rpc findByLocationId(IdStr) returns (RegionPTO);
}
